# libcpp

./: .gitignore  .gitmodules  Makefile  README.md  meson.build  meson_options.txt
docs/: CONTRIBUTING.md  software_inventory.xlsx
extensions/inplace_function/: inplace_function.hpp
include/apple/: Availability.h
include/c++/: __baremetal_locale_fallbacks.hpp  __config  __config.in  __libcxx_config_site.in  __locale  meson.build
include/c++/external_threading/: __external_threading_framework  __external_threading_freertos  __external_threading_threadx
include/c++/include/: meson.build
include/c++/support/: meson.build
src/c++/: chrono.cpp  debug.cpp  locale.cpp  string.cpp  thread.cpp
src/c++abi/: cxa_demangle.cpp  cxa_guard.cpp  cxa_handlers.cpp  cxa_personality.cpp
tools/: CI.jenkinsfile  Jenkinsfile
